--- a/index.css
+++ b/index.css
@@ -1,3 +1,136 @@
+@import url('https://fonts.googleapis.com/css?family=Gudea|Palanquin');
+
+html, body {
+    width: 100%;
+    height: 100%;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.full-height {
+    height: auto;
+}
+
+.nav-a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.center-container {
+    margin: 0 auto;
+    align-self: center;
+}
+
+.margin-left {
+    margin-left: 10px;
+}
+
+.hidden {
+    display: none;
+}
+
+.center-items {
+    display: flex;
+    justify-content: center;
+}
+
+.margin-top {
+    margin-top: 4%;
+}
+
+.footer {
+    height: 100px;
+}
+
+.font_0{
+    font: Normal Normal Normal 50px/1.4em Palanquin, sans-serif;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.font_5 {
+    font: 25px Gudea, sans-serif ;
+    font-weight: normal;
+    line-height: 1.8em;
+}
+
+.font_4 {
+    font: 20px Gudea, sans-serif;
+}
+
+.label-div {
+    margin-left: 10px;
+}
+
+.blur {
+    fill: #fcfcfc;
+}
+
+
+#tooltip-container {
+    position: absolute;
+    background-color: #fff;
+    color: #000;
+    padding: 10px;
+    border: 1px solid;
+    display: none;
+    z-index: 100;
+}
+
+#gridtip-container {
+    position: absolute;
+    background-color: #fff;
+    color: #000;
+    padding: 10px;
+    border: 1px solid;
+    z-index: 100;
+    display: none;
+}
+
+.tooltip_key {
+    font-weight: bold;
+}
+
+.tooltip_value {
+    margin-left: 20px;
+    float: right;
+}
+
+.grid {
+    overflow: visible;
+}
+
+.grid-g {
+    overflow: visible;
+}
+
+span.subtext {
+    font-size: 15px;
+}
+
+@media(max-width:967px) {
+    .close-center {
+        width: 90%;
+    }
+    .font_0 {
+        font: Normal Normal Normal 35px Palanquin, sans-serif;
+        font-weight: bold;
+        line-height: 1.5em;
+    }
+    .font_5 {
+        font: Normal Normal Normal 20px Gudea, sans-serif;
+        font-weight: normal;
+        line-height: 1.8em;
+        letter-spacing: 0em;
+    }
+    .font_4 {
+        font-family: Gudea, sans-serif;
+    }
+}
+
 .background {
     fill: none;
     pointer-events: all;
@@ -21,8 +154,23 @@
 }
 
 .county-boundary {
-    fill: #aaa;
     stroke: #fff;
     stroke-width: .5px;
 }
 
+.line {
+    fill: none;
+    stroke: #ffab00;
+    stroke-width: 3;
+}
+
+.overlay {
+    fill: none;
+    pointer-events: all;
+}
+
+/* Style the dots by assigning a fill and stroke */
+.dot {
+    fill: #ffab00;
+    stroke: #fff;
+}
