--- a/index.css
+++ b/index.css
@@ -175,30 +175,29 @@ span.subtext {
 
 /* Style the dots by assigning a fill and stroke */
 .dot {
-    fill: #ffab00;
     stroke: #fff;
 }
 
 .legend  {
-    height: 2em;
+    height: 1em;
     min-width: 200px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 10px;
-
+    font-size: 12px;
+    margin-top: 5px;
 }
 
 .series-marker {
-    height: 2em;
+    height: 1em;
     border-radius: 10%;
     background-color: crimson;
     display: inline-block;
     margin-right: 4px;
     text-decoration-color: white;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 0px 10px;
     text-align: center;
-    line-height: 2em;
+    line-height: 1em;
     color: white;
+    cursor: pointer;
 }
