--- a/index.css
+++ b/index.css
@@ -151,11 +151,11 @@ span.subtext {
 
 #state-borders {
     fill: none;
-    stroke: #fff;
+    stroke: #000;
     stroke-width: 1.5px;
-    stroke-linejoin: round;
-    stroke-linecap: round;
-    pointer-events: none;
+    /*stroke-linejoin: round;*/
+    /*stroke-linecap: round;*/
+    /*pointer-events: none;*/
 }
 
 .county-boundary {
@@ -186,6 +186,14 @@ span.subtext {
     flex-wrap: wrap;
     font-size: 12px;
     margin-top: 5px;
+}
+
+#counties {
+    display: none;
+}
+
+.viz-buttons {
+    margin: 10px 5px;
 }
 
 .series-marker {
