--- a/index.css
+++ b/index.css
@@ -31,6 +31,10 @@ html, body {
     color: #3c91f2;
 }
 
+.lightblue {
+    color: #4cc3f2;
+}
+
 .margin-top-bottom {
     margin-top: 20px;
     margin-bottom: 20px;
